scripts/nullaway/nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8.txt
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/field/hex/HexFieldGeometry.java:31: error: [NullAway] parameter x1 is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.FieldGeometry.arePointsNear(int,int,int,int) is @Nullable
    public boolean arePointsNear(int x1, int y1, int x2, int y2) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/field/hex/HexFieldGeometry.java:50: error: [NullAway] parameter dir is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.FieldGeometry.getNeighborByDir(int,int,int) is @Nullable
    public Point2D getNeighborByDir(int dir, int baseX, int baseY) {
                                        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Field.java:35: error: [NullAway] @NonNull static field sInstance not initialized
    private static Field sInstance;
                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/FieldObject.java:95: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return (InteractionStrategy<FieldObject, FieldObject>) mIntHandlers.get(typeOfObject);
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/field/sq/SquareFieldGeometry.java:31: error: [NullAway] parameter x1 is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.FieldGeometry.arePointsNear(int,int,int,int) is @Nullable
    public boolean arePointsNear(int x1, int y1, int x2, int y2) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/field/sq/SquareFieldGeometry.java:43: error: [NullAway] parameter dir is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.FieldGeometry.getNeighborByDir(int,int,int) is @Nullable
    public Point2D getNeighborByDir(int dir, int baseX, int baseY) {
                                        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:51: error: [NullAway] parameter bottle is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.InteractionStrategy.performInteraction(T,U) is @Nullable
            public void performInteraction(@javax.annotation.Nullable Mumper obj1, Bottle bottle) {
                                                                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:75: error: [NullAway] passing @Nullable parameter 'tmpDest' where @NonNull is required
        if (nextStep.equals(mumperPos) || nextStep.equals(tmpDest)) {
                                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/GameUtils.java:84: error: [NullAway] parameter i is @NonNull, but parameter in superclass method ru.spbau.sd.model.game.GameUtils.NeighborHandler.handleNeighbor(int,int) is @Nullable
        void handleNeighbor(int i, int j) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/GameUtils.java:106: error: [NullAway] parameter i is @NonNull, but parameter in superclass method ru.spbau.sd.model.game.GameUtils.NeighborHandler.handleNeighbor(int,int) is @Nullable
        void handleNeighbor(int i, int j) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:45: error: [NullAway] parameter obj is @NonNull, but parameter in superclass method ru.spbau.sd.model.game.Drinker.MovementStrategy.makeMove(ru.spbau.sd.model.framework.FieldObject) is @Nullable
            public Point2D makeMove(FieldObject obj) {
                                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:57: error: [NullAway] parameter obj is @NonNull, but parameter in superclass method ru.spbau.sd.model.game.Drinker.MovementStrategy.makeMove(ru.spbau.sd.model.framework.FieldObject) is @Nullable
            public Point2D makeMove(FieldObject obj) {
                                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:71: error: [NullAway] parameter obj is @NonNull, but parameter in superclass method ru.spbau.sd.model.game.Drinker.MovementStrategy.makeMove(ru.spbau.sd.model.framework.FieldObject) is @Nullable
            public Point2D makeMove(FieldObject obj) {
                                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:99: error: [NullAway] parameter drinker is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.InteractionStrategy.performInteraction(T,U) is @Nullable
            public void performInteraction(Drinker drinker, @javax.annotation.Nullable Column column) {
                                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:113: error: [NullAway] parameter buddy is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.InteractionStrategy.performInteraction(T,U) is @Nullable
            public void performInteraction(@javax.annotation.Nullable Drinker obj1, Drinker buddy) {
                                                                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:138: error: [NullAway] dereferenced expression bottle is @Nullable
            bottle.setNewPosition(getX(), getY());
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Policeman.java:52: error: [NullAway] initializer method does not guarantee @NonNull field mBadGuy (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Policeman(int x, int y, PoliceStation ps) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Policeman.java:58: error: [NullAway] parameter drinker is @NonNull, but parameter in superclass method ru.spbau.sd.model.framework.InteractionStrategy.performInteraction(T,U) is @Nullable
            public void performInteraction(@javax.annotation.Nullable Policeman obj1, Drinker drinker) {
                                                                                              ^
    (see http://t.uber.com/nullaway )
18 errors
